Fix progressbar white background in dark mode

--- a/web/src/css/app/_speedtest.scss
+++ b/web/src/css/app/_speedtest.scss
@@ -44,6 +44,7 @@
 
         &.progress {
             height: 2px;
+            background: none;
             overflow: visible;
 
             .progress-bar {
